--- a/AETinyrenderer/AETinyrenderer.vcxproj
+++ b/AETinyrenderer/AETinyrenderer.vcxproj
@@ -138,6 +138,10 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="output.tga" />
+    <Image Include="output_class2_triangle_0.tga" />
+    <Image Include="output_class2_triangle_1.tga" />
+    <Image Include="output_class2_triangle_2.tga" />
+    <Image Include="output_class2_triangle_3.tga" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
