第二课-包围盒遍历法

--- a/AETinyrenderer/AETinyrenderer.vcxproj
+++ b/AETinyrenderer/AETinyrenderer.vcxproj
@@ -142,6 +142,7 @@
     <Image Include="output_class2_triangle_1.tga" />
     <Image Include="output_class2_triangle_2.tga" />
     <Image Include="output_class2_triangle_3.tga" />
+    <Image Include="output_class2_triangle_4.tga" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
