--- a/AETinyrenderer/AETinyrenderer.vcxproj.filters
+++ b/AETinyrenderer/AETinyrenderer.vcxproj.filters
@@ -52,5 +52,8 @@
     <Image Include="output_class2_triangle_3.tga">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="output_class2_triangle_4.tga">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
