第二课-加载模型并且上色

--- a/AETinyrenderer/AETinyrenderer.vcxproj.filters
+++ b/AETinyrenderer/AETinyrenderer.vcxproj.filters
@@ -55,5 +55,8 @@
     <Image Include="output_class2_triangle_4.tga">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="output_class2_triangle_model_5.tga">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
