第二课-法线与光源+背部剔除

--- a/AETinyrenderer/AETinyrenderer.vcxproj
+++ b/AETinyrenderer/AETinyrenderer.vcxproj
@@ -144,6 +144,7 @@
     <Image Include="output_class2_triangle_3.tga" />
     <Image Include="output_class2_triangle_4.tga" />
     <Image Include="output_class2_triangle_model_5.tga" />
+    <Image Include="output_class2_triangle_model_6.tga" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
