--- a/AETinyrenderer/AETinyrenderer.vcxproj
+++ b/AETinyrenderer/AETinyrenderer.vcxproj
@@ -145,6 +145,7 @@
     <Image Include="output_class2_triangle_4.tga" />
     <Image Include="output_class2_triangle_model_5.tga" />
     <Image Include="output_class2_triangle_model_6.tga" />
+    <Image Include="output_class2_triangle_model_7.tga" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
