--- a/AETinyrenderer/AETinyrenderer.vcxproj.filters
+++ b/AETinyrenderer/AETinyrenderer.vcxproj.filters
@@ -61,5 +61,8 @@
     <Image Include="output_class2_triangle_model_6.tga">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="output_class2_triangle_model_7.tga">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
