现在是依托答辩开始重构代码

--- a/AETinyrenderer/AETinyrenderer.vcxproj.filters
+++ b/AETinyrenderer/AETinyrenderer.vcxproj.filters
@@ -67,5 +67,11 @@
     <Image Include="output_class4_1.tga">
       <Filter>资源文件</Filter>
     </Image>
+    <Image Include="output_class4_triangle_model.tga">
+      <Filter>资源文件</Filter>
+    </Image>
+    <Image Include="output_class4_triangle_model_1.tga">
+      <Filter>资源文件</Filter>
+    </Image>
   </ItemGroup>
 </Project>
